Add API endpoints which return mockup data
