# apps/api/src/app/cultivation/cultivation.module.ts
@@ -1,0 +1,7 @@
+import { Module } from '@nestjs/common';
+import { CultivationController } from './cultivation.controller';
+
+@Module({
+  controllers: [CultivationController]
+})
+export class CultivationModule {}
